// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayMultiSelect renders 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <input
          class="form-control-inset"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders a custom menu 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
      style=""
    >
      <div
        class="input-group-item"
      >
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            foo
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove foo"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            bar
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove bar"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            baz
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove baz"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          class="form-control-inset"
          type="text"
          value="one"
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-outline-borderless btn-outline-secondary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu autocomplete-dropdown-menu"
        style="max-width: none; left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <strong>
                one
              </strong>
              <p>
                Name
              </p>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders as disabled 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            foo
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove foo"
              class="close"
              disabled=""
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            bar
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove bar"
              class="close"
              disabled=""
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            baz
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove baz"
              class="close"
              disabled=""
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          class="form-control-inset"
          disabled=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders as not valid 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            foo
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove foo"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            bar
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove bar"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            baz
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove baz"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          class="form-control-inset"
          type="text"
          value=""
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-outline-borderless btn-outline-secondary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders with items 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            foo
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove foo"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            bar
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove bar"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            baz
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove baz"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-small"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times-small"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          class="form-control-inset"
          type="text"
          value=""
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-outline-borderless btn-outline-secondary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Interactions Use custom function for filtering autocomplete results 1`] = `
<div
  class="dropdown-menu autocomplete-dropdown-menu"
  style="max-width: none; left: -999px; top: -995px; width: 0px;"
>
  <ul
    class="list-unstyled"
  >
    <li>
      <button
        class="dropdown-item"
      >
        <div>
          <strong>
            b
          </strong>
          <strong>
            a
          </strong>
          <strong>
            r
          </strong>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Interactions Use custom function for filtering autocomplete results 2`] = `
<div
  class="dropdown-menu autocomplete-dropdown-menu"
  style="max-width: none; left: -999px; top: -995px; width: 0px;"
>
  <ul
    class="list-unstyled"
  >
    <li>
      <button
        class="dropdown-item"
      >
        foo
      </button>
    </li>
  </ul>
</div>
`;
